bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod
  labels:
    app: test
spec:
  containers:
  - name: nginx
    image: nginx
