good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod
  labels:
    app: test
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
